# fits_label_vulkan

./: .gitignore  CMakeLists.txt  config.ini  imgui.ini
src/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/core/: Application.cpp  Application.h  Config.cpp  Config.h  IPlugin.h  Logger.cpp  Logger.h  PluginContext.cpp  PluginContext.h  PluginManager.cpp  PluginManager.h
src/input/: InputHandler.cpp  InputHandler.h
src/plugins/: DemoPlugin.cpp  DemoPlugin.h
src/render/: CoordinateSystem.h  CoordinateSystemRenderer.cpp  CoordinateSystemRenderer.h  DemoObjectRenderer.cpp  DemoObjectRenderer.h  GridRenderer.cpp  GridRenderer.h  PointCloudRenderer.cpp  PointCloudRenderer.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h
src/shaders/: compile.bat  coord.vert  demo.frag  demo.vert  pointcloud.frag  pointcloud.frag.spv  pointcloud.vert  pointcloud.vert.spv
src/shaders/shaders/: demo.frag.spv  demo.vert.spv
src/ui/: UI.cpp  UI.h
src/vulkan/: VulkanContext.cpp  VulkanContext.h
